added new seal for UC

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -176,10 +176,10 @@ CoGe's Entrance Tools:<br>
 
 </TMPL_IF>
 
-<TMPL_IF NAME=NSF>
+<TMPL_IF NAME=CREDITS>
 <div align=center>
-<a href="http://www.nsf.gov" target= "_new"><img src="./picts/nsf-logo.gif" border=0><br></a>
-<span class="small">Funding provided by NSF</span>
+<a href="http://www.nsf.gov" target= "_new"><img src="./picts/nsf-logo.gif" border=0 width = 100px></a>
+<img src="./picts/uc_seal.gif" border=0 width=100px>
 <br><a href="/awstats/awstats.pl?config=CoGe" target=_new class="small" style="text-align: center;">CoGe's usage stats</a>
 </div>
 </TMPL_IF>
