switched link to Genomevolution

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -528,8 +528,8 @@ Window Width: <input type=textbox class=backbox size=4 id="width" onkeypress="on
 <br>
 <br>
 If this is your first time visiting, you may find these documents helpful:<br>
-   <li>For more information on how MaizeGDB and CoGe work together: <span class="link" onclick=window.open('http://synteny.cnr.berkeley.edu/wiki/index.php/MaizeGDB_and_CoGe')>MaizeGDB-CoGe</span>
-   <li>For more information on how Maize-Sorhgum comparative genomics using CoGe: <span class="link" onclick=window.open('http://synteny.cnr.berkeley.edu/wiki/index.php/Maize_Sorghum_Syntenic_dotplot')>Maize-Sorghum and CoGe</span>
+   <li>For more information on how MaizeGDB and CoGe work together: <span class="link" onclick=window.open('http://genomevolution.org/wiki/index.php/MaizeGDB_and_CoGe')>MaizeGDB-CoGe</span>
+   <li>For more information on how Maize-Sorhgum comparative genomics using CoGe: <span class="link" onclick=window.open('http://genomevolution.org/wiki/index.php/Maize_Sorghum_Syntenic_dotplot')>Maize-Sorghum and CoGe</span>
 </div>
 
 <span class="legend ui-button ui-corner-all" onclick="$('.legend').toggle()">Show Legend</span>
