minor change in parsing running log file

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -844,7 +844,7 @@ window.open('/CoGe/MatrixView.pl?matrix='+matrix);
 	  {
 	    blast_program = log.match(/(blastz)/);
 	  }
-  	blast="Running "+blast_program[1]+" algorithm . . . <br/>";
+  	blast="Running blast algorithm . . . <br/>";
   	
   	match=log.match(/\*(.+)\*\sblast\sanalysis\scomplete/g);
   	if(match)
