updated function search_bar to change font to normal as long as it isn't Search

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -268,7 +268,8 @@ function display_dagchainer_settings(params,type) {
 }
 
 function search_bar(div_id){
-  if($('#'+div_id).val() == "Search") $('#'+div_id).val("").css({fontStyle: "normal"});
+  if ($('#'+div_id).val() == "Search") $('#'+div_id).val("");
+  if ($('#'+div_id).val() != "Search") $('#'+div_id).css({fontStyle: "normal"});
 }
 
 function restore_search_bar(div_id){
